--- a/app/code/Savchenko/CheckoutStep/composer.json
+++ b/app/code/Savchenko/CheckoutStep/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "Savchenko CheckoutStep",
-  "description": "Savchenko_CheckoutStep developed for Magecom as a test task",
+  "description": "Savchenko_CheckoutStep developed for Magecom as a learning task",
   "require": {
     "php": "~5.6.0|7.0.2|7.0.6|7.1.3|~7.2.0",
     "magento/framework": "*",
@@ -28,7 +28,7 @@
       "registration.php"
     ],
     "psr-4": {
-      "Savchenko\\Donation\\": ""
+      "Savchenko\\CheckoutStep\\": ""
     }
   }
 }
